--- a/MailSendSmtp/Views/Shared/_Layout.cshtml
+++ b/MailSendSmtp/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SendMail" asp-action="New">
-                                Privacy
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SendMail" asp-action="MailKitMail">
+                                Mail Kit Version
                             </a>
                         </li>
                     </ul>
